// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidatorsList /> renders validators list 1`] = `
Array [
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1618374794 collapse-row-arrow"
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      25
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label new badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Next Epoch
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@astro-stakers.poolv1.near"
            >
              astro-stakers.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28"
            >
              ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      1%
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="spinner-border spinner-border-sm"
      />
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        19,407,279.888

        NEAR
      </span>
    </td>
  </tr>,
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1991982184 collapse-row-arrow disable"
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      26
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label pending badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Pending
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@chorusone.poolv1.near"
            >
              chorusone.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:AZwJAgu2qRxHwdpj8ioZEFGcc2jbaZGN7ZvUe7CuXtM7"
            >
              ed25519:AZwJAgu2qRxHwdpj8ioZEFGcc2jbaZGN7ZvUe7CuXtM7
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      8%
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="spinner-border spinner-border-sm"
      />
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        6,174,390.41291

        NEAR
      </span>
    </td>
  </tr>,
]
`;

exports[`<ValidatorsList /> renders validators list 1`] = `
Array [
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1991982184 collapse-row-arrow "
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      25
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        -
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@astro-stakers.poolv1.near"
            >
              astro-stakers.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28"
            >
              ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      1%
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="spinner-border spinner-border-sm"
      />
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        19,407,279.888

        NEAR
      </span>
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="jsx-1486326988 cumulative-stake-chart"
      >
        <div
          className="jsx-1486326988 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 current-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 cumulative-stake-label"
        >
          N/A
        </div>
      </div>
    </td>
  </tr>,
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1618374794 collapse-row-arrow"
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      26
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label kickout badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Leaving
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@baziliknear.poolv1.near"
            >
              baziliknear.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:E4LAWdgLifBEoaWvhRNy5vpdAnUc3GsUHePeiAurZY5v"
            >
              ed25519:E4LAWdgLifBEoaWvhRNy5vpdAnUc3GsUHePeiAurZY5v
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      3%
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="spinner-border spinner-border-sm"
      />
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        4,035,443.45331

        NEAR
      </span>
      <br
        className="jsx-1618374794"
      />
      <small
        className="jsx-1618374794"
      >
        +
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          756,812.4902

          NEAR
        </span>
      </small>
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="jsx-1486326988 cumulative-stake-chart"
      >
        <div
          className="jsx-1486326988 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 current-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 cumulative-stake-label"
        >
          N/A
        </div>
      </div>
    </td>
  </tr>,
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1618374794 collapse-row-arrow"
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      27
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label active badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Active
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@audit_one.poolv1.near"
            >
              audit_one.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:9x2LqdGVL8MKbAziezMhQjPCKKeFAaExeyJpVvBvGuAC"
            >
              ed25519:9x2LqdGVL8MKbAziezMhQjPCKKeFAaExeyJpVvBvGuAC
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      7%
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="spinner-border spinner-border-sm"
      />
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        3,698,682.66061

        NEAR
      </span>
      <br
        className="jsx-1618374794"
      />
      <small
        className="jsx-1618374794"
      >
        +
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          1,093,573.2829

          NEAR
        </span>
      </small>
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="jsx-1486326988 cumulative-stake-chart"
      >
        <div
          className="jsx-1486326988 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 current-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 cumulative-stake-label"
        >
          N/A
        </div>
      </div>
    </td>
  </tr>,
]
`;
